--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </nav>
     </header>
     <section>
-        <h1>Mountain Hikes</h1>
+        <h1 class="pageTitle">Mountain Hikes</h1>
             <p>
                 Mountain hiking embodies what hiking is all about: breathtaking views, fresh air, and a good workout. Here’s you’re guide on how to hike the mountains safely.
             </p>
-            <button>Trail Maps</button>
+            <button class="redButton">Trail Maps</button>
             <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/hero.jpg" alt="hero image of a forest">
     </section>
     <section>
@@ -71,14 +71,14 @@
         </div>
     </section>
     <section>
-        <h1>Mountain Weather</h1>
+        <h1 class="contentSectionTitle">Mountain Weather</h1>
         <h2>Thing you will need.</h2>
         <p>
             You’re going to want to check the weather for the mountain that you’re hiking. A simple Google search will usually do the trick. The important thing to note is that the weather is often colder and windier in the mountains, and the weather can change quickly.
         </p>
         <h2>Things to say no to.</h2>
         <p>Unless you have experience hiking mountains in the snow and ice, don't do it.</p>
-        <button>Download App</button>
+        <button class="redButton">Download App</button>
         <ul>
             <li>
                 <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/weather/thunder.svg" alt="thunder icon">
