--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="index-hero">
+        <div>
         <h1 class="pageTitle">Mountain Hikes</h1>
             <p>
                 Mountain hiking embodies what hiking is all about: breathtaking views, fresh air, and a good workout. Here’s you’re guide on how to hike the mountains safely.
             </p>
             <button class="redButton">Trail Maps</button>
+        </div>    
             <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/hero.jpg" alt="hero image of a forest">
     </section>
-    <section>
+    <section id="index-brands">
         <ul>
             <li>
                 <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/brands/tnf.svg" alt="northface logo">
@@ -58,15 +60,17 @@
             </li>
         </ul>
     </section>
-    <section>
-        <h1>Planning a Mountain Hike</h1>
+    <section id="idex-planning">
+        <h1 class="contentSectionTitle">Planning a Mountain Hike</h1>
         <p>
             The first hiking tip has more to do with expectation setting than technique. If you normally hike at about a 2-3mph pace (which is pretty normal), expect to cover 0.5-1.5 mph when hiking up a mountain. 
         </p>
-        <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/planning/planning.jpg" alt="layout of gear">
+        <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/planning/planning.jpg" alt="layout of gear" id="planning-hero">
 
-        <div>
+        <div id="planning-callout">
+            <div id="clock-container">
             <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/planning/clock.svg" alt="alarm clock">
+            </div>
             <h3>"Don't forget your alarm clock"</h3>
         </div>
     </section>
