--- a/index.html
+++ b/index.html
@@ -74,15 +74,8 @@
             <h3>"Don't forget your alarm clock"</h3>
         </div>
     </section>
-    <section>
-        <h1 class="contentSectionTitle">Mountain Weather</h1>
-        <h2>Thing you will need.</h2>
-        <p>
-            You’re going to want to check the weather for the mountain that you’re hiking. A simple Google search will usually do the trick. The important thing to note is that the weather is often colder and windier in the mountains, and the weather can change quickly.
-        </p>
-        <h2>Things to say no to.</h2>
-        <p>Unless you have experience hiking mountains in the snow and ice, don't do it.</p>
-        <button class="redButton">Download App</button>
+
+    <section id="index-weather">
         <ul>
             <li>
                 <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/weather/thunder.svg" alt="thunder icon">
@@ -97,6 +90,16 @@
                 <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/weather/snow.svg" alt="snow icon">
             </li>
         </ul>
+
+        <h1 class="contentSectionTitle">Mountain Weather</h1>
+        <h2 class="contactSectionSubTitle">Thing you will need.</h2>
+        <p>
+            You’re going to want to check the weather for the mountain that you’re hiking. A simple Google search will usually do the trick. The important thing to note is that the weather is often colder and windier in the mountains, and the weather can change quickly.
+        </p>
+        <h2 class="contactSectionSubTitle">Things to say no to.</h2>
+        <p>Unless you have experience hiking mountains in the snow and ice, don't do it.</p>
+        <button class="redButton">Download App</button>
+        
     </section>
     <footer>
         <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/footer.jpg" alt="footer image">
