--- a/contacts.html
+++ b/contacts.html
@@ -32,8 +32,12 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="contact-hero">
         <h1 class="pageTitle">Contact</h1>
+        
+    </section>
+
+    <section id="contact-form">
         <form action = "#">
             <input type="text" placeholder="Name">
             <input type="email" placeholder="Email">
@@ -41,6 +45,9 @@
             <button class="redButton">Send</button>
         </form>
     </section>
+
+
+
     <footer>
         <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/footer.jpg" alt="footer image">
         <h2>Sign Up!</h2>
