--- a/views.html
+++ b/views.html
@@ -31,12 +31,12 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="views-hero">
         <h1 class="pageTitle">Mountain Views</h1>
         <p>If you’re doing an out and back route, remember that the trail can look different going down in the opposite direction. Be aware of the trail and periodically check that you’re in the right place on your GPS or map.</p>
     </section>
 
-    <ul>
+    <ul id="views-gallery">
         <li><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/views/gallery-1.jpg" alt="Gallery 1 image"></li>
         <li><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/views/gallery-2.jpg" alt="Gallery 2 image"></li>
         <li><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/views/gallery-3.jpg" alt="Gallery 3 image"></li>
