--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+
+    <script src="https://kit.fontawesome.com/084247a43e.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/styles.css">
     <title>Week 5</title>
 </head>
@@ -33,13 +36,16 @@
     </header>
     <section id="index-hero">
         <div>
-        <h1 class="pageTitle">Mountain Hikes</h1>
+        <h1 class="pageTitle">Mountain Hikess</h1>
             <p>
                 Mountain hiking embodies what hiking is all about: breathtaking views, fresh air, and a good workout. Here’s you’re guide on how to hike the mountains safely.
             </p>
             <button class="redButton">Trail Maps</button>
         </div>    
             <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/hero.jpg" alt="hero image of a forest">
+    
+            <div id="index-hero-image"></div>
+    
     </section>
     <section id="index-brands">
         <ul>
@@ -65,7 +71,8 @@
         <p>
             The first hiking tip has more to do with expectation setting than technique. If you normally hike at about a 2-3mph pace (which is pretty normal), expect to cover 0.5-1.5 mph when hiking up a mountain. 
         </p>
-        <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/planning/planning.jpg" alt="layout of gear" id="planning-hero">
+        <div id = "planning-hero"></div>
+        <!-- <img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/home/planning/planning.jpg" alt="layout of gear" id="planning-hero"> -->
 
         <div id="planning-callout">
             <div id="clock-container">
@@ -110,16 +117,16 @@
 
             <ul>
                 <li>
-                    <a href="https://twitter.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/x.svg" alt="x logo"></a>
+                    <a href="https://twitter.com/?lang=en"><i class="fa-brands fa-x-twitter"></i>" alt="x logo"></a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/link.svg" alt="linked in logo"></a>
+                    <a href="https://linkedin.com/?lang=en"><i class="fa-brands fa-linkedin"></i> alt="linked in logo"></a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/ig.svg" alt="instagram logo"></a>
+                    <a href="https://instagram.com/?lang=en"><i class="fa-brands fa-instagram"></i> alt="instagram logo"></a>
                 </li>
                 <li>
-                    <a href="https://github.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/git.svg" alt="github logo"></a>
+                    <a href="https://github.com/?lang=en"><i class="fa-brands fa-github"></i> alt="github logo"></a>
                 </li>
             </ul>
         </form>
