--- a/views.html
+++ b/views.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/084247a43e.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/styles.css">
     <title>Starting Template</title>
