--- a/views.html
+++ b/views.html
@@ -56,16 +56,16 @@
 
             <ul>
                 <li>
-                    <a href="https://twitter.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/x.svg" alt="x logo"></a>
+                    <a href="https://twitter.com/?lang=en"><i class="fa-brands fa-x-twitter"></i>" alt="x logo"></a>
                 </li>
                 <li>
-                    <a href="https://linkedin.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/link.svg" alt="linked in logo"></a>
+                    <a href="https://linkedin.com/?lang=en"><i class="fa-brands fa-linkedin"></i> alt="linked in logo"></a>
                 </li>
                 <li>
-                    <a href="https://instagram.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/ig.svg" alt="instagram logo"></a>
+                    <a href="https://instagram.com/?lang=en"><i class="fa-brands fa-instagram"></i> alt="instagram logo"></a>
                 </li>
                 <li>
-                    <a href="https://github.com/?lang=en"><img src="/Users/miagarcia/Desktop/Info-552-Sp24-Class-Starting-Files/img/img/footer/git.svg" alt="github logo"></a>
+                    <a href="https://github.com/?lang=en"><i class="fa-brands fa-github"></i> alt="github logo"></a>
                 </li>
             </ul>
         </form>
