--- a/contacts.html
+++ b/contacts.html
@@ -38,12 +38,21 @@
         
     </section>
 
-    <section id="contact-form">
-        <form action = "#">
+    <section id="contact-form" class="xxl-grid">
+        <form action = "#" class="xxl-grid-item">
+        <div id="contact-name">
             <input type="text" placeholder="Name">
+        </div>
+
+        <div id="contact-email">
             <input type="email" placeholder="Email">
+        </div>
+        <div id="contact-message">
             <textarea placeholder="Message"></textarea>
+        </div>
+        <div id="contact-button">
             <button class="redButton">Send</button>
+        </div>
         </form>
     </section>
 
