--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/084247a43e.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Week 5</title>
+    <title>Week 5!!</title>
 </head>
 
 <body>
